# FreeRDP

./: CMakeLists.txt
channels/cliprdr/client/: CMakeLists.txt
channels/drdynvc/client/: drdynvc_main.c
channels/rdpgfx/client/: rdpgfx_main.c
channels/rdpsnd/client/: CMakeLists.txt
client/: CMakeLists.txt
client/Mac/cli/: AppDelegate.m
client/common/: CMakeLists.txt
fuzzer/: mppc_compress_fuzzer.c  mppc_decompress_fuzzer.c  mppc_fuzzer.h
libfreerdp/: CMakeLists.txt
libfreerdp/codec/: CMakeLists.txt  color.c  mppc.c  mppc.h  ncrush.c  ncrush.h  xcrush.h  zgfx.c
libfreerdp/codec/fuzzer/: CMakeLists.txt
libfreerdp/codec/fuzzer/mppc/: CMakeLists.txt  MppcFuzzerCompressBellsRdp4.c  MppcFuzzerCompressBellsRdp5.c  MppcFuzzerCompressBufferRdp5.c  MppcFuzzerCompressIslandRdp5.c  MppcFuzzerDecompressBellsRdp4.c  MppcFuzzerDecompressBellsRdp5.c  MppcFuzzerDecompressBufferRdp5.c
libfreerdp/codec/fuzzer/mppc/corpus/CompressBellsRdp5/: default
libfreerdp/codec/fuzzer/mppc/corpus/CompressBufferRdp5/: default
libfreerdp/codec/fuzzer/mppc/corpus/CompressIslandRdp5/: default
libfreerdp/codec/fuzzer/mppc/corpus/DecompressBellsRdp4/: default
libfreerdp/codec/fuzzer/mppc/corpus/DecompressBellsRdp5/: default
libfreerdp/codec/fuzzer/mppc/corpus/DecompressBufferRdp5/: default
libfreerdp/codec/fuzzer/ncrush/: CMakeLists.txt  NcrushFuzzerDecompress.c
libfreerdp/codec/fuzzer/ncrush/corpus/Decompress/: default
libfreerdp/core/: orders.c  rdp.c
libfreerdp/gdi/: bitmap.c  gdi.c  gfx.c  graphics.c  shape.c
scripts/: bundle-mac-os.sh
